--- a/index.html
+++ b/index.html
@@ -209,7 +209,11 @@
           <div class="span6 offset3 order">
             <!-- Standard Bootstrap button. -->
             <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-            <button class="btn btn-success btn-large">Preorder</button>
+            <!--button class="btn btn-success btn-large">Preorder</button-->
+            <a class="coinbase-button" data-button-style="custom_large" data-button-text="Preorder with Bitcoin" 
+		data-code="f6697d29047aa2e1dd48d90d236ddc89" 
+		href="https://coinbase.com/checkouts/f6697d29047aa2e1dd48d90d236ddc89">Preorder with Bitcoin</a>
+	     <script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
           </div>
           </div>
           <div class="row-fluid">
